--- a/M2-D3_Homework.html
+++ b/M2-D3_Homework.html
@@ -94,7 +94,7 @@
       </nav>
       <div class="jumbotron">
         <h1 class="display-4">We take you Around the World!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <p class="lead">Experience is everything. Just rest your mind and let us do the rest!</p>
         <hr class="my-4">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
@@ -114,7 +114,7 @@
             </div>
             <div class="col-6 col-md-4 col-lg-3 px-2 py-2">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="/Assets/india-top-attractions-taj-mahal.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
