--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="row">
             <div class="col-6 col-md-4 col-lg-3 px-2 py-2">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="/Assets/Dubai_image.jpg" class="card-img-top"  height="200px" width="200px"alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -114,7 +114,7 @@
             </div>
             <div class="col-6 col-md-4 col-lg-3 px-2 py-2">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="/Assets/india-top-attractions-taj-mahal.jpg" class="card-img-top" height="200px" width="200px"alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -124,7 +124,7 @@
             </div>
             <div class="col-6 col-md-4 col-lg-3 px-2 py-2">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="/Assets/iStock-535570117-696x392.jpg" class="card-img-top" height="200px" width="200px"alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -134,7 +134,7 @@
             </div>
             <div class="col-6 col-md-4 col-lg-3 px-2 py-2">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="/Assets/Dubai_image.jpg" class="card-img-top"height="200px" width="200px" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -150,7 +150,7 @@
       <div class="row">
           <div class="col-6 col-md-4 col-lg-2 px-2 py-2">
               <div class="card shadow-lg p-3 mb-5 bg-white rounded">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="/Assets/india-top-attractions-taj-mahal.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -160,7 +160,7 @@
           </div>
           <div class="col-6 col-md-4 col-lg-2 px-2 py-2">
               <div class="card shadow-lg p-3 mb-5 bg-white rounded">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="/Assets/Dubai_image.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -170,7 +170,7 @@
           </div>
           <div class="col-6 col-md-4 col-lg-2 px-2 py-2">
               <div class="card shadow-lg p-3 mb-5 bg-white rounded">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="/Assets/iStock-535570117-696x392.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -180,7 +180,7 @@
           </div>
           <div class="col-6 col-md-4 col-lg-2 px-2 py-2">
               <div class="card shadow-lg p-3 mb-5 bg-white rounded">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="/Assets/india-top-attractions-taj-mahal.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -190,7 +190,7 @@
           </div>
           <div class="col-6 col-md-4 col-lg-2 px-2 py-2">
             <div class="card shadow-lg p-3 mb-5 bg-white rounded">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="/Assets/Dubai_image.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -200,7 +200,7 @@
         </div>
         <div class="col-6 col-md-4 col-lg-2 px-2 py-2">
             <div class="card shadow-lg p-3 mb-5 bg-white rounded">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="/Assets/iStock-535570117-696x392.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -231,7 +231,7 @@
   <div class="row">
     <div class="col-6 col-md-4 col-lg-3 px-2 py-2">
       <div class="card bg-dark text-white">
-        <img src="..." class="card-img" alt="...">
+        <img src="/Assets/Dubai_image.jpg" class="card-img" alt="..." height="200" width="200">
         <div class="card-img-overlay">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -241,7 +241,7 @@
     </div>
     <div class="col-6 col-md-4 col-lg-3 px-2 py-2">
       <div class="card bg-dark text-white">
-        <img src="..." class="card-img" alt="...">
+        <img src="/Assets/iStock-535570117-696x392.jpg" class="card-img" alt="..." height="200" width="200">
         <div class="card-img-overlay">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -251,7 +251,7 @@
     </div>
     <div class="col-6 col-md-4 col-lg-3 px-2 py-2">
       <div class="card bg-dark text-white">
-        <img src="Assets/iStock-535570117-696x392.jpg" class="card-img" alt="..." height="200" width="200">
+        <img src="/Assets/iStock-535570117-696x392.jpg" class="card-img" alt="..." height="200" width="200">
         <div class="card-img-overlay">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
